Handle spaces and quotes in chrome_elf command line parser

This is the worst sort of procedural stateful goopy code. I followed the
pseudo-code from
http://www.windowsinspired.com/how-a-windows-programs-splits-its-command-line-into-individual-arguments/
and verified against calling CommandLineToArgvW() which is what we're
attempting to emulate here.

Two tests were removed from
InstallStaticTest.GetSwitchValueFromCommandLineTest because I don't
believe they were correct (spaces after the equal sign), but maybe
Ananta can correct me on that.

R=grt@chromium.org
BUG=670012

Review-Url: https://codereview.chromium.org/2543503003
Cr-Commit-Position: refs/heads/master@{#436056}

Former-commit-id: e8882778ceb608911d96e7e485dbbff4db5c2b83